--- a/android/app/src/main/res/values-night/themes.xml
+++ b/android/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,20 @@
     <style name="Base.Theme.DicerealmAndroid" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
+        <!-- Set Globally -->
+
+        <!-- Material3 -->
+        <item name="buttonStyle">@style/StandardButtons</item>
+        <item name="materialButtonStyle">@style/StandardButtons</item>
+
+
+
+        <!-- Android -->
+        <item name="android:textColor">@color/darkText</item>
+
+        <item name="android:windowBackground">@color/black</item>
     </style>
+
+    <style name="Theme.DicerealmAndroid" parent="Base.Theme.DicerealmAndroid" />
 </resources>
