--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#FAFAFA</color>
+    <color name="white">#FAFAFA</color>
+
+    <color name="darkText">#000000</color>
+    <color name="lightText">#000000</color>
 </resources>
