--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -3,6 +3,12 @@
     <style name="Base.Theme.DicerealmAndroid" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <!-- Set Globally -->
+        <item name="buttonStyle">@style/StandardButtons</item>
+        <item name="materialButtonStyle">@style/StandardButtons</item>
+        <item name="textAppearanceBody1">@color/white</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
     <style name="Theme.DicerealmAndroid" parent="Base.Theme.DicerealmAndroid" />
