--- a/android/app/src/main/res/layout/home_screen.xml
+++ b/android/app/src/main/res/layout/home_screen.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:id="@+id/home"
     android:layout_height="match_parent"
+    tools:context=".HomeActivity"
     >
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="283dp"
-        android:layout_height="168dp"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         android:layout_marginTop="20dp"
         android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,13 +33,14 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:layout_marginTop="20dp"
         android:hint="Room ID"
-        android:textColorHint="@color/darkText"
+
 
         app:hintEnabled="true"
         app:hintAnimationEnabled="true"
+        android:textColorHint="@color/darkText"
         app:hintTextAppearance="@style/CustomHintTextAppearance"
         app:hintTextColor="@color/darkText"
         app:boxStrokeColor="@color/darkText"
@@ -61,7 +63,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/joinBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
@@ -70,16 +72,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create Own room"
-        android:textSize="26sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
