--- a/android/app/src/main/res/layout/home_screen.xml
+++ b/android/app/src/main/res/layout/home_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/home"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity"
+    tools:context=".activity.HomeActivity"
     >
 
     <ImageView
