--- a/android/app/src/main/res/values-night/themes.xml
+++ b/android/app/src/main/res/values-night/themes.xml
@@ -11,7 +11,7 @@
         <item name="materialButtonStyle">@style/StandardButtons</item>
 
         <!-- Android -->
-        <item name="android:textColor">@color/darkText</item>
+        <item name="android:textColor">@color/lightText</item>
         <item name="android:windowBackground">@color/black</item>
 
     </style>
