--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,8 +5,6 @@
     <style name="StandardButtons" parent="Widget.Material3.Button">
         <item name="android:backgroundTint">#2C2C2C</item>
         <item name="android:textColor">#FFFFFF</item>
-        <item name="android:padding">16dp</item>
-        <!-- Add other customizations here -->
     </style>
 
     <!-- Custom hint text appearance -->
@@ -19,6 +17,12 @@
     <style name="TextDescription" parent="TextAppearance.AppCompat">
         <item name="android:textSize">11sp</item>
         <item name="android:textColor">#501c10</item>
+    </style>
+    <!--  Disabled Button   -->
+    <style name="DisabledButton" parent="Widget.Material3.Button">
+        <item name="android:backgroundTint">@color/gray</item>
+        <item name="android:textColor">@color/lightgrayText</item>
+        <item name="android:enabled">false</item>
     </style>
 
 </resources>
