feat/fix: Add action buttons logic and fix message history logic with other players. Creating a new DialogueClass for all messages relating dialogue. Fix game start bug where it doesnt start for the other players.

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
 
     <color name="darkText">#000000</color>
     <color name="lightText">#000000</color>
+
+
+    <!--  Messages background  -->
+    <color name="messageBackground">#FAFAFA</color>
 </resources>
