--- a/android/app/src/main/res/layout/activity_room_screen.xml
+++ b/android/app/src/main/res/layout/activity_room_screen.xml
@@ -70,6 +70,9 @@
         android:id="@+id/startGameBtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@drawable/button_bg_selector"
+        android:textColor="@drawable/button_textcolour_selector"
+        style="@style/StandardButtons"
         android:text="Start Game"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
