--- a/android/app/src/main/res/layout/activity_combat_screen.xml
+++ b/android/app/src/main/res/layout/activity_combat_screen.xml
@@ -26,42 +26,53 @@
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button1"
+            android:id="@+id/attackButtonLeft"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="Attack"
-            android:textSize="20dp"
-            app:cornerRadius="4dp"
+            android:layout_height="0dp"
+            android:text="Attack Left"
+            android:textSize="18dp"
+            app:cornerRadius="8dp"
             android:layout_marginEnd="3dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintEnd_toStartOf="@+id/attackButtonRight"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/skillButton"
             app:layout_constraintHorizontal_chainStyle="spread" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button2"
+            android:id="@+id/attackButtonRight"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="Spells"
-            android:textSize="20dp"
-            app:cornerRadius="4dp"
-            app:layout_constraintStart_toEndOf="@id/button1"
+            android:layout_height="0dp"
+            android:text="Attack right"
+            android:textSize="18dp"
+            app:cornerRadius="8dp"
+            app:layout_constraintStart_toEndOf="@id/attackButtonLeft"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/skillButton" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/skillButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="14dp"
+            android:text="Spells"
+            android:textSize="20dp"
+            app:cornerRadius="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <ScrollView
         android:id="@+id/messages"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        app:layout_constraintBottom_toTopOf="@+id/Actions"
+        android:layout_height="400dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.009">
+        app:layout_constraintTop_toBottomOf="@+id/combatTitle">
 
         <LinearLayout
             android:id="@+id/CombatMessageLayout"
@@ -69,6 +80,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
+
+    <TextView
+        android:id="@+id/PlayerInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Player info here"
+        app:layout_constraintBottom_toTopOf="@+id/CombatSequence"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/messages" />
+
+    <TextView
+        android:id="@+id/combatTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Combat Mode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- Action -->
