Added RecycleView for Items and spells
- Please check if adding a extention in CombatScreen class is ok and if the files for Card Adapter are in correct locations.

--- a/android/app/src/main/res/layout/activity_combat_screen.xml
+++ b/android/app/src/main/res/layout/activity_combat_screen.xml
@@ -118,9 +118,20 @@
                 <!-- Add more items as needed -->
                 <!-- You can even use custom views, images, buttons, etc. -->
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cardRecycleView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical"
+                    android:fadeScrollbars="false"
+                    android:scrollbarSize="20dp"
+                    android:layout_weight="0.70">
 
+                </androidx.recyclerview.widget.RecyclerView>
 
             </LinearLayout>
+
+
         </ScrollView>
         <com.google.android.material.button.MaterialButton
         android:id="@+id/BackButton"
