--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
     <!--  Text Description Style  -->
     <style name="TextDescription" parent="TextAppearance.AppCompat">
         <item name="android:textSize">11sp</item>
-        <item name="android:textColor">#501c10</item>
+        <item name="android:textColor">@color/darkred</item>
     </style>
     <!--  Disabled Button   -->
     <style name="DisabledButton" parent="Widget.Material3.Button">
